# idleon-automation

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: tests.yml
common/: auto_commit.py  capture.py  input.py  monitor.py  region_picker.py  regions.py  review_nag.py  score_diff.py  session_log.py  shot_log.py  templates.py  window.py
minigames/catching/: auto_extract_fly.py  capture.py  detector.py  main.py  pick_play_region.py
minigames/chopping/: calibrate.py  detector.py  main.py  pick_bar_region.py  pick_button_region.py  pick_leaf_region.py
minigames/chopping/assets/: regions.json
minigames/darts/: auto_crop_release.py  capture.py  detector.py  main.py  pick_game_over.py  pick_release.py  pick_score_region.py  pick_wind_region.py  watch_wind.py
minigames/darts/assets/: regions.json
minigames/hoops/: STRATEGY.md  ball_calibrate.py  capture.py  debug_match.py  detector.py  main.py  pick_game_over.py  pick_lives_region.py  pick_score_region.py  score_calibrate.py
minigames/hoops/assets/: regions.json  shots_snapshot.json
scripts/: dump_shots.py
tests/: test_auto_commit.py  test_chopping_detector.py  test_dump_shots.py  test_entry_points.py  test_failsafe_wired.py  test_hoops_detector.py  test_hoops_offset.py  test_hoops_score.py  test_monitor.py  test_regions.py  test_review_nag.py  test_score_diff.py  test_session_log.py  test_shot_log.py  test_templates.py
ui/: launcher.py
