[project]
name = "idleon-automation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyautogui==0.9.54",
    "mss==9.0.2",
    "opencv-python==4.9.0.80",
    "Pillow==10.3.0",
    "numpy==1.26.4",
]

[project.scripts]
hoops = "minigames.hoops.main:run"
hoops-capture = "minigames.hoops.capture:run"
hoops-debug = "minigames.hoops.debug_match:run"
hoops-ball-calibrate = "minigames.hoops.ball_calibrate:run"
hoops-score-calibrate = "minigames.hoops.score_calibrate:run"
hoops-pick-score-region = "minigames.hoops.pick_score_region:run"
chopping = "minigames.chopping.main:run"
chopping-calibrate = "minigames.chopping.calibrate:run"
darts = "minigames.darts.main:run"
darts-capture = "minigames.darts.capture:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "minigames"]
