[project]
name = "idleon-automation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyautogui==0.9.54",
    "mss==9.0.2",
    "opencv-python==4.9.0.80",
    "Pillow==10.3.0",
    "numpy==1.26.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
idleon = "ui.launcher:run"
hoops = "minigames.hoops.main:run"
hoops-capture = "minigames.hoops.capture:run"
hoops-debug = "minigames.hoops.debug_match:run"
hoops-ball-calibrate = "minigames.hoops.ball_calibrate:run"
hoops-score-calibrate = "minigames.hoops.score_calibrate:run"
hoops-pick-score-region = "minigames.hoops.pick_score_region:run"
hoops-pick-game-over = "minigames.hoops.pick_game_over:run"
hoops-pick-lives-region = "minigames.hoops.pick_lives_region:run"
chopping = "minigames.chopping.main:run"
chopping-calibrate = "minigames.chopping.calibrate:run"
chopping-pick-bar-region = "minigames.chopping.pick_bar_region:run"
chopping-pick-button-region = "minigames.chopping.pick_button_region:run"
chopping-pick-leaf-region = "minigames.chopping.pick_leaf_region:run"
darts = "minigames.darts.main:run"
darts-capture = "minigames.darts.capture:run"
darts-pick-release = "minigames.darts.pick_release:run"
darts-auto-crop-release = "minigames.darts.auto_crop_release:run"
darts-pick-wind-region = "minigames.darts.pick_wind_region:run"
darts-watch-wind = "minigames.darts.watch_wind:run"
darts-pick-score-region = "minigames.darts.pick_score_region:run"
darts-pick-game-over = "minigames.darts.pick_game_over:run"
catching = "minigames.catching.main:run"
catching-capture = "minigames.catching.capture:run"
catching-pick-play-region = "minigames.catching.pick_play_region:run"
catching-extract-fly = "minigames.catching.auto_extract_fly:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "minigames", "ui"]
